fix: use a sensible z-index

--- a/src/ducks/sharing/autosuggest.styl
+++ b/src/ducks/sharing/autosuggest.styl
@@ -7,7 +7,7 @@
     position absolute
     top 100%
     margin-top 1px
-    z-index 500
+    z-index $alert-index-mobile
     width 100%
     max-height em(170px)
     overflow auto
